; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_closedir.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_closedir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_jfs_diropen = type { %struct.grub_jfs_diropen* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.grub_jfs_diropen*)* @grub_jfs_closedir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @grub_jfs_closedir(%struct.grub_jfs_diropen* %0) #0 {
  %2 = alloca %struct.grub_jfs_diropen*, align 8
  store %struct.grub_jfs_diropen* %0, %struct.grub_jfs_diropen** %2, align 8
  %3 = load %struct.grub_jfs_diropen*, %struct.grub_jfs_diropen** %2, align 8
  %4 = icmp ne %struct.grub_jfs_diropen* %3, null
  br i1 %4, label %6, label %5

5:                                                ; preds = %1
  br label %13

6:                                                ; preds = %1
  %7 = load %struct.grub_jfs_diropen*, %struct.grub_jfs_diropen** %2, align 8
  %8 = getelementptr inbounds %struct.grub_jfs_diropen, %struct.grub_jfs_diropen* %7, i32 0, i32 0
  %9 = load %struct.grub_jfs_diropen*, %struct.grub_jfs_diropen** %8, align 8
  %10 = call i32 @grub_free(%struct.grub_jfs_diropen* %9)
  %11 = load %struct.grub_jfs_diropen*, %struct.grub_jfs_diropen** %2, align 8
  %12 = call i32 @grub_free(%struct.grub_jfs_diropen* %11)
  br label %13

13:                                               ; preds = %6, %5
  ret void
}

declare dso_local i32 @grub_free(%struct.grub_jfs_diropen*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
